unpackaged/main/default/objects/ProductionOrderItemLine__c/ProductionOrderItemLine__c.object-meta.xml
<CustomObject>
    <label>Продукт заказа</label>
    <nameField>
        <displayFormat>POLI-{0000000}</displayFormat>
        <label>Номер продукта заказа</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Продукты заказа</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>