unpackaged/main/default/objects/ProductionOrderItemLine__c/fields/CountItems__c.field-meta.xml
<CustomField>
    <fullName>CountItems__c</fullName>
    <label>Количество</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>