unpackaged/main/default/objects/ProductionOrderItemLine__c/fields/CustomBodyColor__c.field-meta.xml
<CustomField>
    <fullName>CustomBodyColor__c</fullName>
    <label>Нестандартный цвет корпуса (RAL)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>