unpackaged/main/default/objects/ProductionOrderItemLine__c/fields/CustomConnection__c.field-meta.xml
<CustomField>
    <fullName>CustomConnection__c</fullName>
    <description>Нестандартные присоединительные размеры (Впр х Шпр),мм</description>
    <inlineHelpText>Нестандартные присоединительные размеры (Впр х Шпр),мм</inlineHelpText>
    <label>Нестандартные п. размеры  (Впр х Шпр),мм</label>
    <length>255</length>
    <type>Text</type>
</CustomField>