unpackaged/main/default/objects/ProductionOrderItemLine__c/fields/CustomMounting__c.field-meta.xml
<CustomField>
    <fullName>CustomMounting__c</fullName>
    <label>Нестандартный способ крепления и монтажа</label>
    <length>255</length>
    <type>Text</type>
</CustomField>