unpackaged/main/default/objects/ProductionOrderItemLine__c/fields/CustomPerformance__c.field-meta.xml
<CustomField>
    <fullName>CustomPerformance__c</fullName>
    <label>Нестандартная производительность, м3/ча</label>
    <length>255</length>
    <type>Text</type>
</CustomField>