unpackaged/main/default/objects/ProductionOrderItemLine__c/fields/CustomPressure__c.field-meta.xml
<CustomField>
    <fullName>CustomPressure__c</fullName>
    <label>Нестандартный перепад давления, Па</label>
    <length>255</length>
    <type>Text</type>
</CustomField>