unpackaged/main/default/objects/ProductionOrderItemLine__c/fields/CustomSize__c.field-meta.xml
<CustomField>
    <fullName>CustomSize__c</fullName>
    <label>Нестандартные габариты (ДхШхВ), мм</label>
    <length>255</length>
    <type>Text</type>
</CustomField>