unpackaged/main/default/objects/ProductionOrderItemLine__c/fields/LimitSizeShipping__c.field-meta.xml
<CustomField>
    <fullName>LimitSizeShipping__c</fullName>
    <label>Ограничение на транспорт. габариты</label>
    <length>255</length>
    <type>Text</type>
</CustomField>