unpackaged/main/default/objects/ProductionOrderItemLine__c/fields/medprom__c.field-meta.xml
<CustomField>
    <fullName>medprom__c</fullName>
    <label>Мед/Пром</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Нет</fullName>
                <default>true</default>
                <label>Нет</label>
            </value>
            <value>
                <fullName>Мед</fullName>
            </value>
            <value>
                <fullName>Пром</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>