unpackaged/main/default/objects/ProductionOrderItemLine__c/fields/NumberPP__c.field-meta.xml
<CustomField>
    <fullName>NumberPP__c</fullName>
    <label>№ пп</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>