unpackaged/main/default/objects/ProductionOrderItemLine__c/fields/ProductionOrder__c.field-meta.xml
<CustomField>
    <fullName>ProductionOrder__c</fullName>
    <label>Производственный заказ</label>
    <referenceTo>ProductionOrder__c</referenceTo>
    <relationshipLabel>Продукты заказа</relationshipLabel>
    <relationshipName>POLIxaK2</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>