unpackaged/main/default/objects/ProductionOrderItemLine__c/fields/ProductName__c.field-meta.xml
<CustomField>
    <fullName>ProductName__c</fullName>
    <label>Продукт</label>
    <length>255</length>
    <type>Text</type>
</CustomField>