unpackaged/main/default/objects/ProductionOrderItemLine__c/fields/SectionComposition__c.field-meta.xml
<CustomField>
    <fullName>SectionComposition__c</fullName>
    <label>Компоновка секций</label>
    <length>255</length>
    <type>Text</type>
</CustomField>