unpackaged/main/default/objects/ProductionOrderItemLine__c/fields/SeparateControl__c.field-meta.xml
<CustomField>
    <fullName>SeparateControl__c</fullName>
    <label>Наличие выносного пульта</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Нет</fullName>
                <default>true</default>
                <label>Нет</label>
            </value>
            <value>
                <fullName>Да</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>