unpackaged/main/default/objects/ProductionOrderItemLine__c/fields/SideService__c.field-meta.xml
<CustomField>
    <fullName>SideService__c</fullName>
    <label>Сторона обслуживания</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>-R</fullName>
                <default>true</default>
                <label>-R</label>
            </value>
            <value>
                <fullName>-L</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>