unpackaged/main/default/objects/ProductionOrderItemLine__c/fields/SpecialNotes__c.field-meta.xml
<CustomField>
    <fullName>SpecialNotes__c</fullName>
    <label>Особые отметки</label>
    <length>255</length>
    <type>Text</type>
</CustomField>